intro overflow mobile screen fixed

--- a/ikea-vs-death-metal/src/App.css
+++ b/ikea-vs-death-metal/src/App.css
@@ -349,9 +349,9 @@
 @media only screen and (max-width: 768px) {
 
   .intro-text {
-    padding: 5rem 2.5rem 2rem 2.5rem;
-    font-size: 1.7rem;
-    padding-top: 5rem;
+    padding: 0 2.5rem 2rem 2.5rem;
+    font-size: 3vh;
+    height: 75vh;
   }
 
   .text-enter {
